refact: use a handler for local and another for production
The local handler just formats the diffenrent input and output for
AWS Sam Local, but still calls main handler, that is used for production.

--- a/template.yml
+++ b/template.yml
@@ -3,7 +3,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Runtime: python3.6
-      Handler: handler.main
+      Handler: handler.local
       Timeout: 10
       Events:
         Api:
